# scaling-waffle

./: Anchor.toml  Cargo.toml  index.html  package-lock.json  package.json  program-keypair.json  token-info.json  vite.config.ts  vitest.config.ts
programs/death_protocol/: Cargo.toml
programs/death_protocol/src/: error.rs  instructions.rs  lib.rs  processor.rs  state.rs
programs/death_protocol/src/instructions/: initialize.rs  stake.rs
programs/death_protocol/test-ledger/: faucet-keypair.json  genesis.bin.failed
programs/death_protocol/test-ledger/rocksdb/: IDENTITY  LOG  MANIFEST-000005
programs/death_protocol/test-ledger/rocksdb.failed/: IDENTITY  LOG  MANIFEST-000005
public/: manifest.json
public/.well-known/: phantom-domain-verification.txt
scripts/: create-death-token.mjs  create-mint.mjs  test-protocol.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: BondingPanel.tsx  DocsPopup.tsx  ErrorScreen.tsx  Header.tsx  ScrollingHeader.tsx  StakingInterface.tsx  StakingPanel.tsx  TokenMinting.tsx  WithdrawalQueue.tsx
src/context/: WalletContext.tsx
src/hooks/: useDeathProtocol.ts  useStaking.ts  useWallet.ts
src/idl/: death_protocol.json
src/pages/: Home.tsx  Staking.tsx
src/program/: DeathProtocolClient.ts  staking.ts  token.ts
src/utils/: constants.ts  program.ts  web3.ts
tests/: setup.ts  staking.test.ts
